--- a/.github/workflows/Recovery Build (Legacy).yml
+++ b/.github/workflows/Recovery Build (Legacy).yml
@@ -69,6 +69,8 @@ jobs:
     - name: Cleanup
       uses: rokibhasansagar/slimhub_actions@main
       # That's it! Now use your normal steps
+    - name: Maximize build disk space
+      uses: easimon/maximize-build-space@v10
 
     - name: Prepare the environment
       run: |
